actualizacion de filtro empresa y finalizar tareas

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ db.sqlite3-journal
 #Ignorar elementos del proyecto en git para python django
 
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__/*
 *.py[cod]
 *$py.class
 
@@ -144,3 +144,27 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+dashboard/__pycache__/urls.cpython-39.pyc
+dashboard/__pycache__/views.cpython-39.pyc
+dashboard/__pycache__/urls.cpython-39.pyc
+dashboard/__pycache__/views.cpython-39.pyc
+messagesMail/__pycache__/__init__.cpython-39.pyc
+messagesMail/__pycache__/admin.cpython-39.pyc
+messagesMail/__pycache__/apps.cpython-39.pyc
+messagesMail/__pycache__/models.cpython-39.pyc
+messagesMail/__pycache__/tasks.cpython-39.pyc
+messagesMail/__pycache__/urls.cpython-39.pyc
+messagesMail/__pycache__/views.cpython-39.pyc
+controltareas/__pycache__/__init__.cpython-39.pyc
+controltareas/__pycache__/celery.cpython-39.pyc
+controltareas/__pycache__/settings.cpython-39.pyc
+controltareas/__pycache__/urls.cpython-39.pyc
+dashboard/__pycache__/urls.cpython-39.pyc
+dashboard/__pycache__/views.cpython-39.pyc
+dashboard/templatetags/__pycache__/__init__.cpython-39.pyc
+dashboard/templatetags/__pycache__/parse_iso.cpython-39.pyc
+dashboard/templatetags/__pycache__/random_numbers.cpython-39.pyc
+controltareas/__pycache__/__init__.cpython-39.pyc
+controltareas/__pycache__/celery.cpython-39.pyc
+controltareas/__pycache__/settings.cpython-39.pyc
+controltareas/__pycache__/urls.cpython-39.pyc
