Carga de sript para supervisor en ubuntu

--- a/deploy/controltareas.conf
+++ b/deploy/controltareas.conf
@@ -1,6 +1,8 @@
 [program:controltareas]
-command=/usr/local/bin/long.sh
+command=/home/juanshocl/controltareas/deploy.sh
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/long.err.log
-stdout_logfile=/var/log/long.out.log
+stderr_logfile=/var/log/controltareas.err.log
+stdout_logfile=/var/log/controltareas.out.log
+environment=LANG=en_US.UTF-8,LC_ALL=en_US.UTF-8
+priority=3
