correccion error en log para celery

--- a/deploy/controltareas_celery.conf
+++ b/deploy/controltareas_celery.conf
@@ -1,5 +1,5 @@
 [program:controltareasCeleryWorker]
-command=/home/juanshocl/controltareas/env/bin/celery -A controltareas worker ---loglevel=INFO
+command=/home/juanshocl/controltareas/env/bin/celery -A controltareas worker --loglevel=INFO
 directory=/home/juanshocl/controltareas
 numprocs=1
 stdout_logfile=/var/log/celery_controltareas_worker.log
